widget with adapter

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,24 +6,33 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    </application>
-<!--    <appwidget-provider-->
-<!--        xmlns:android="http://schemas.android.com/apk/res/android"-->
-<!--        android:initialLayout="@layout/widget"-->
-<!--        android:minHeight="130dp"-->
-<!--        android:minWidth="328dp"-->
-<!--        android:updatePeriodMillis="2400000">-->
 
-<!--    </appwidget-provider>-->
+        <receiver
+            android:name=".Widget"
+            android:icon="@mipmap/ic_launcher"
+            android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/widget_metadata">
+            </meta-data>
+        </receiver>
+        <service
+            android:name=".DataFlipperService"
+            android:permission="android.permission.BIND_REMOTEVIEWS">
+        </service>
+
+    </application>
 
 </manifest>
